# sleepy-gatekeeper

./: .env-local  .env.local  .env.test  .gitignore  Anchor.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HACKATHON_PRD.md  IMPLEMENTATION_SUMMARY.md  PITCH_DECK.md  PROTECTED_CONTENT_SUMMARY.md  README.md  ROADMAP.md  TESTING.md  TODO.md  middleware.ts  package.json  pnpm-lock.yaml  proxy.ts  tsconfig.json  tsconfig.tsbuildinfo
.github/instructions/: css.instructions.md
.github/workflows/: copilot-setup-steps.yml
agents/: multiAgent.ts  runtime.ts
app/: fonts.css  globals.css  layout.tsx  page.tsx  providers.tsx
app/articles/: page.tsx
app/components/: ConnectWallet.tsx  DesktopIcon.tsx  DraggableWindow.tsx  EscrowPayButton.tsx  GlassPanel.tsx  HelpDocs.tsx  LiveClock.tsx  MediaPlayer.tsx  NetworkSwitcher.tsx  PopupDialog.tsx  SandboxManager.tsx  Screensaver.tsx  Settings.tsx  SolanaEscrowInfo.tsx  StartMenu.tsx  SwapAsset.tsx  Taskbar.tsx  Terminal.tsx  TerminalScreen.tsx  ThemeToggle.tsx  WalletConnectModal.tsx  Win95Window.tsx  index.ts
app/context/: WalletContext.tsx
app/creator/: page.tsx
app/podcasts/: page.tsx
app/showcase/: page.tsx
docs/: BUGFIX.md  COMPONENTS.md  CORE_FUNCTIONS.md  PRD.md  README.md  TECHSTACK.md  TODO.md  WorkflowApps.md  techstack.md
lib/: agent-signer.ts  escrow.ts  m2m-payment.ts  mpp.ts  payment-ledger.ts  sandbox.ts  solana.ts  wallet-auth.ts  x402-real.ts
programs/escrow/: Cargo.toml
programs/escrow/src/: lib.rs
public/: site.webmanifest
scripts/: test-protected-content.ts
tests/: escrow.ts
(+42 files in other folders)
