[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[dependencies]
constant_time_eq = "=0.4.1"
blake3 = "=1.8.2"
proc-macro2 = "=1.0.86"
