[package]
name = "escrow"
version = "0.1.0"
description = "Anchor-based escrow program for trustless USDC payments on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
bytemuck = "1.14.0"
bytemuck_derive = "=1.8.1"
anchor-spl = "0.32.1"
blake3 = "=1.8.2"