[package]
name = "escrow"
version = "0.1.0"
description = "Anchor-based escrow program for trustless USDC payments on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.0", features = ["idl-build"] }
proc-macro2 = "=1.0.94"
blake3 = "=1.8.2"